--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Ricardo Sousa
-email: unrealthereal@gmail.com
+email: ricardodesousa.info@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -20,7 +20,7 @@ contact: # displayed in header
     mail:
         text: unrealthereal@gmail.com
         icon: envelope # see https://fortawesome.github.io/Font-Awesome/icons/
-        url: mailto:unrealthereal@gmail.com
+        url: mailto:ricardodesousa.info@gmail.com
     twitter:
         text: /therealunreal
         icon: twitter-square
