--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ contact: # displayed in header
     facebook:
         text: /ricardosousa93
         icon: facebook-square
-        url: https://www.facebook.com/ricardosousa93
+        url: https://www.linkedin.com/in/ricardosousa93/
 #    steam:
 #        text: /id/unrea1
 #        icon: steam-square
