--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ contact: # displayed in header
         url: https://twitter.com/THEREALUNREAL
     facebook:
         text: /ricardosousa93
-        icon: facebook-square
+        icon: linkedin-square
         url: https://www.linkedin.com/in/ricardosousa93/
 #    steam:
 #        text: /id/unrea1
